<resources>
    <string name="app_name">Keepu</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">LOG IN</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="question1a">Provide comprehensive short term services to victims of human trafficking</string>
    <string name="question1b">Promote collaboration and coordination of services</string>
    <string name="question1c">Provide trainings on human trafficking victims topics</string>
    <string name="question1d">Create awareness about human traffic</string>
    <string name="question1e">Provide trainings on human trafficking victims topics</string>
</resources>
