<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/textViewKnot1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Knot 1"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/textViewProgramCharacteristics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Program Characteristics"
                android:textSize="24sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/textViewQuestion1A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  - Provide comprehensive short term services to victims of human trafficking"
                android:visibility="gone"
                tools:text="@string/question1a" />

            <TextView
                android:id="@+id/textViewQuestion1B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  - Promote collaboration and coordination of services"
                android:visibility="gone"
                tools:text="@string/question1b" />

            <TextView
                android:id="@+id/textViewQuestion1C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  - Provide trainings on human trafficking victims topics"
                android:visibility="gone"
                tools:text="@string/question1c" />

            <TextView
                android:id="@+id/textViewQuestion1D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  - Create awareness about human traffic"
                android:visibility="gone"
                tools:text="@string/question1d" />

            <TextView
                android:id="@+id/textViewFundedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone"
                tools:text="@string/question1e" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textViewProgramResources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Program Resources"
                android:textSize="24sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/textViewTechnology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  Technology Needed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewComputersNeeded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewTabletsNeeded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewOfficePhonesNeeded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewSpace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  Space Needed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewOfficeSpace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewEventSpace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewTrainingSpace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewStaff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  Staff Needed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewManagersNeeded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewTrainingSpecialistsNeeded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewCaseWorkersNeeded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewCommunityEducatorsNeeded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/textViewProgramActivities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Program Activities"
                android:textSize="24sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/textViewQuestion18a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  - Identify Law enforcement agencies"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewQuestion18b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  - Identify human trafficking prevention service providers"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewQuestion18c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  - Identify potential trainers on human trafficking warning signs"
                android:visibility="gone" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/textViewKnot2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Knot 2"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/textViewOutputTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  Outputs"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewOutcomeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  Outcomes"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewOutcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textViewFlowchart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Knot 3"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/textViewFlowchartInputTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="Input" />

            <TextView
                android:id="@+id/textViewFlowchartInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:background="@drawable/blackborder"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <ImageView
                android:id="@+id/imageViewArrow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/arrow_downward" />

            <TextView
                android:id="@+id/textViewFlowchartActivitiesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="Activities" />

            <TextView
                android:id="@+id/textViewFlowchartActivities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:background="@drawable/blackborder"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <ImageView
                android:id="@+id/imageViewArrow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/arrow_downward" />

            <TextView
                android:id="@+id/textViewFlowchartOutputsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="Outputs" />

            <TextView
                android:id="@+id/textViewFlowchartOutputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:background="@drawable/blackborder"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <ImageView
                android:id="@+id/imageViewArrow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/arrow_downward" />

            <TextView
                android:id="@+id/textViewFlowchartOutcomesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="Outcomes" />

            <TextView
                android:id="@+id/textViewFlowchartOutcomes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:background="@drawable/blackborder"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header" />

</android.support.v4.widget.DrawerLayout>